POST for hal support
